# qemu

./: .b4-config  .cirrus.yml  .cvsignore  .dir-locals.el  .editorconfig  .exrc  .gdbinit  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpublish  .mailmap  .patchew.yml  .readthedocs.yml  .shippable.yml  .travis.yml  CLAUDE.md  CODING_STYLE  CODING_STYLE.rst  COPYING  COPYING.LIB  COPYING.PYTHON  ChangeLog  ChangeLog-CVS  Changelog  DEBIAN-PACKAGE.md  Dockerfile  HACKING  HACKING.rst  Kconfig  Kconfig.host  LICENSE  MAINTAINERS  Makefile  Makefile.dis  Makefile.hw  Makefile.objs  Makefile.target  (+533 more)
accel/: Kconfig  Makefile.objs  accel-blocker.c  accel-common.c  accel-internal.h  accel-irq.c  accel-qmp.c  accel-softmmu.c  accel-softmmu.h  accel-system.c  accel-system.h  accel-target.c  accel-user.c  accel.c  dummy-cpus.c  dummy-cpus.h  meson.build  qtest.c
audio/: Makefile.objs  alsaaudio.c  audio-be.c  audio-hmp-cmds.c  audio-mixeng-be.c  audio.c  audio.h  audio_int.h  audio_legacy.c  audio_pt_int.c  audio_pt_int.h  audio_template.h  audio_win_int.c  audio_win_int.h  coreaudio.c  coreaudio.m  dbusaudio.c  dsound_template.h  dsoundaudio.c  esdaudio.c  fmodaudio.c  fmodaudio.h  jackaudio.c  meson.build  mixeng.c  mixeng.h  mixeng_template.h  noaudio.c  ossaudio.c  ossaudio.h  paaudio.c  pwaudio.c  rate_template.h  sdlaudio.c  sdlaudio.h  sndioaudio.c  spiceaudio.c  sys-queue.h  trace-events  trace.h  (+4 more)
authz/: Makefile.objs  base.c  list.c  listfile.c  meson.build  pamacct.c  simple.c  trace-events  trace.h
backends/: Kconfig  Makefile.objs  baum.c  confidential-guest-support.c  cryptodev-builtin.c  cryptodev-hmp-cmds.c  cryptodev-lkcf.c  cryptodev-vhost-user.c  cryptodev-vhost.c  cryptodev.c  dbus-vmstate.c  dbus-vmstate1.xml  host_iommu_device.c  hostmem-epc.c  hostmem-file.c  hostmem-memfd.c  hostmem-ram.c  hostmem-shm.c  hostmem.c  igvm-cfg.c  igvm.c  igvm.h  iommufd.c  meson.build  msmouse.c  rng-builtin.c  rng-egd.c  rng-random.c  rng.c  spdm-socket.c  spdm.c  testdev.c  tpm.c  trace-events  trace.h  vhost-user.c  wctablet.c
block/: Makefile.objs  accounting.c  aio_task.c  amend.c  archipelago.c  backup-top.c  backup-top.h  backup.c  blkdebug.c  blkio.c  blklogwrites.c  blkmemory.c  blkreplay.c  blksim.c  blksim.h  blkverify.c  block-backend.c  block-copy.c  block-gen.h  block-ram-registrar.c  bochs.c  cloop.c  commit.c  copy-before-write.c  copy-before-write.h  copy-on-read.c  copy-on-read.h  coroutines.h  cow.c  create.c  crypto.c  crypto.h  curl.c  dirty-bitmap.c  dmg-bz2.c  dmg-lzfse.c  dmg.c  dmg.h  fde.c  file-posix.c  (+88 more)
bsd-user/: Makefile.objs  bsd-file.h  bsd-mem.c  bsd-mem.h  bsd-misc.c  bsd-misc.h  bsd-mman.h  bsd-proc.c  bsd-proc.h  bsdload.c  elfcore.c  elfload.c  errno_defs.h  main.c  meson.build  mmap.c  path.c  plugin-api.c  qemu-bsd.h  qemu-types.h  qemu.h  signal-common.h  signal.c  special-errno.h  strace.c  syscall.c  syscall_defs.h  trace-events  trace.h  uaccess.c
chardev/: Makefile.objs  baum.c  char-console.c  char-fd.c  char-fd.h  char-fe.c  char-file.c  char-hmp-cmds.c  char-hub.c  char-io.c  char-io.h  char-mux.c  char-mux.h  char-null.c  char-parallel.c  char-pipe.c  char-pty.c  char-ringbuf.c  char-serial.c  char-socket.c  char-stdio.c  char-udp.c  char-win-stdio.c  char-win.c  char-win.h  char.c  chardev-internal.h  chardev-sysemu.c  meson.build  msmouse.c  spice.c  testdev.c  trace-events  trace.h  wctablet.c
crypto/: Makefile.objs  aes.c  afalg.c  afalgpriv.h  afsplit.c  akcipher-gcrypt.c.inc  akcipher-nettle.c.inc  akcipher.c  akcipherpriv.h  block-luks-priv.h  block-luks.c  block-luks.h  block-qcow.c  block-qcow.h  block-qcowaes.c  block-qcowaes.h  block.c  blockpriv.h  cipher-afalg.c  cipher-builtin.c  cipher-builtin.c.inc  cipher-gcrypt.c  cipher-gcrypt.c.inc  cipher-gnutls.c.inc  cipher-nettle.c  cipher-nettle.c.inc  cipher-stub.c.inc  cipher.c  cipherpriv.h  clmul.c  der.c  der.h  desrfb.c  hash-afalg.c  hash-gcrypt.c  hash-glib.c  hash-gnutls.c  hash-nettle.c  hash-stub.c  hash.c  (+50 more)
disas/: Makefile.objs  alpha.c  arm-a64.cc  arm.c  capstone.c  cris.c  csky.c  disas-common.c  disas-host.c  disas-internal.h  disas-mon.c  disas-target.c  disas.c  hexagon.c  hppa.c  i386.c  ia64.c  lm32.c  m68k.c  meson.build  microblaze.c  mips.c  moxie.c  nanomips.c  nanomips.cpp  nanomips.h  nios2.c  objdump.c  ppc.c  riscv-xthead.c  riscv-xthead.h  riscv-xventana.c  riscv-xventana.h  riscv.c  riscv.h  s390.c  sh4.c  sparc.c  tci.c  xtensa.c
docs/: COLO-FT.txt  aio_notify.promela  aio_notify_bug.promela  amd-memory-encryption.txt  arm-cpu-features.rst  atomics.txt  barrier.txt  bitmaps.md  blkdebug.txt  block-replication.txt  bootindex.txt  build-system.txt  bypass-iommu.txt  can.txt  ccid.txt  colo-proxy.txt  conf.py  confidential-guest-support.txt  cpu-hotplug.rst  defs.rst.inc  ebpf_rss.rst  generic-loader.txt  glossary.rst  hyperv.txt  ich9-ehci-uhci.cfg  igd-assign.txt  image-fuzzer.txt  index.html.in  index.rst  libcacard.txt  live-block-ops.txt  lockcnt.txt  mach-virt-graphical.cfg  memory-hotplug.txt  memory.txt  meson.build  microvm.rst  migration.txt  multi-thread-compression.txt  multi-thread-tcg.txt  (+46 more)
fsdev/: 9p-iov-marshal.c  9p-iov-marshal.h  9p-marshal.c  9p-marshal.h  Makefile.objs  file-op-9p.h  meson.build  p9array.h  qemu-fsdev-dummy.c  qemu-fsdev-opts.c  qemu-fsdev-throttle.c  qemu-fsdev-throttle.h  qemu-fsdev.c  qemu-fsdev.h  virtfs-proxy-helper.c  virtfs-proxy-helper.texi  virtio-9p-marshal.c  virtio-9p-marshal.h
gdbstub/: gdbstub.c  internals.h  meson.build  softmmu.c  syscalls.c  system.c  trace-events  trace.h  user-target.c  user.c
hw/: 9p.h  Kconfig  Makefile.objs  a15mpcore.c  a9m2410.c  a9mpcore.c  a9scu.c  ac97.c  ac97_int.h  acpi-dsdt.dsl  acpi-dsdt.hex  acpi.c  acpi.h  acpi_ich9.c  acpi_ich9.h  acpi_mcpx.c  acpi_mcpx.h  acpi_piix4.c  acpi_xbox.c  acpi_xbox.h  adb.c  adb.h  adlib.c  ads7846.c  alpha_dp264.c  alpha_palcode.c  alpha_pci.c  alpha_sys.h  alpha_typhoon.c  amd_smbus.c  amd_smbus.h  an5206.c  apb_pci.c  apb_pci.h  apic-msidef.h  apic.c  apic.h  apic_common.c  apm.c  (+782 more)
(+15229 files in other folders)
